server-modernized: harden DB/Flyway and QA CI gates